--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,8 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.primefaces/primefaces
+    compile group: 'org.primefaces', name: 'primefaces', version: '6.1'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
